; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_filter-basic.c_fz_open_concat.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_filter-basic.c_fz_open_concat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.concat_filter = type { i32, i32, i32, i64, i64 }

@next_concat = common dso_local global i32 0, align 4
@close_concat = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @fz_open_concat(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.concat_filter*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = sub nsw i32 %9, 1
  %11 = sext i32 %10 to i64
  %12 = mul i64 %11, 8
  %13 = add i64 32, %12
  %14 = trunc i64 %13 to i32
  %15 = call %struct.concat_filter* @fz_calloc(i32* %8, i32 1, i32 %14)
  store %struct.concat_filter* %15, %struct.concat_filter** %7, align 8
  %16 = load i32, i32* %5, align 4
  %17 = load %struct.concat_filter*, %struct.concat_filter** %7, align 8
  %18 = getelementptr inbounds %struct.concat_filter, %struct.concat_filter* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 8
  %19 = load %struct.concat_filter*, %struct.concat_filter** %7, align 8
  %20 = getelementptr inbounds %struct.concat_filter, %struct.concat_filter* %19, i32 0, i32 4
  store i64 0, i64* %20, align 8
  %21 = load %struct.concat_filter*, %struct.concat_filter** %7, align 8
  %22 = getelementptr inbounds %struct.concat_filter, %struct.concat_filter* %21, i32 0, i32 3
  store i64 0, i64* %22, align 8
  %23 = load i32, i32* %6, align 4
  %24 = load %struct.concat_filter*, %struct.concat_filter** %7, align 8
  %25 = getelementptr inbounds %struct.concat_filter, %struct.concat_filter* %24, i32 0, i32 1
  store i32 %23, i32* %25, align 4
  %26 = load %struct.concat_filter*, %struct.concat_filter** %7, align 8
  %27 = getelementptr inbounds %struct.concat_filter, %struct.concat_filter* %26, i32 0, i32 2
  store i32 32, i32* %27, align 8
  %28 = load i32*, i32** %4, align 8
  %29 = load %struct.concat_filter*, %struct.concat_filter** %7, align 8
  %30 = load i32, i32* @next_concat, align 4
  %31 = load i32, i32* @close_concat, align 4
  %32 = call i32* @fz_new_stream(i32* %28, %struct.concat_filter* %29, i32 %30, i32 %31)
  ret i32* %32
}

declare dso_local %struct.concat_filter* @fz_calloc(i32*, i32, i32) #1

declare dso_local i32* @fz_new_stream(i32*, %struct.concat_filter*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
